# tauri-example

./: .tool-versions  README.md  next.config.js  package-lock.json  package.json
app/: page.tsx
app/page-2/: page.tsx
components/: wrapper.tsx
lib/: tauri.ts
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/sidecar/: Makefile  go.mod  main.go
src-tauri/src/: atomic_once_cell.rs  commands.rs  lib.rs  main.rs  sentry.rs  sidecar.rs
