[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tauri_example"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.2.4", features = ["protocol-asset"] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-fs = "2.2.0"
url = "2.5.4"
dotenvy_macro = "0.15.7"
dotenvy = "0.15.7"
tauri-plugin-sentry = "0.4.1"
tokio = { version = "1.44.1", features = ["full"] }
tauri-plugin-shell = "2.2.0"
dirs = "6.0.0"
